fix user name white-space wrap

--- a/app/css/userList.css
+++ b/app/css/userList.css
@@ -100,6 +100,7 @@
     width: 100px;
     overflow: hidden;
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 #userList .userName:hover {
